--- a/librechat.yaml
+++ b/librechat.yaml
@@ -5,10 +5,10 @@ endpoints:
     - id: "gemini-rotator"
       name: "Gemini (Rotator)"
       type: "google"
-      baseURL: "https://kutil.tuyulkutilajah2.workers.dev"
-      apiKey: "rotator"
+      baseURL: "${GEMINI_ROTATOR_BASE}"
+      apiKey: "${ROTATOR_DUMMY_KEY}"
       headers:
-        x-rotator-secret: "kutil-rotator-1HcPtAkJ3GY1EV5n"
+        x-rotator-secret: "${ROTATOR_SECRET}"
       models:
         default:
           - "gemini-2.5-pro"
