--- a/librechat.yaml
+++ b/librechat.yaml
@@ -1,14 +1,13 @@
 version: "1.2.8"
-
 endpoints:
   custom:
-    - id: "gemini-rotator"
+    - id: gemini-rotator
       name: "Gemini (Rotator)"
       type: "google"
-      baseURL: "https://kutil.tuyulkutilajah2.workers.dev"
-      apiKey: "rotator"
+      baseURL: "${GEMINI_ROTATOR_BASE}"
+      apiKey: "${ROTATOR_DUMMY_KEY}"
       headers:
-        x-rotator-secret: "kutil-rotator-1HcPtAkJ3GY1EV5n"
+        x-rotator-secret: "${ROTATOR_SECRET}"
       models:
         default:
           - "gemini-2.5-pro"
@@ -16,5 +15,5 @@ endpoints:
           - "gemini-2.0-flash"
       customParams:
         defaultParamsEndpoint: "google"
-      titleModel: "gemini-2.5-flash"
-      summarizeModel: "gemini-2.5-flash"
+      titleModel: "gemini-2.0-flash"
+      summarizeModel: "gemini-2.0-flash"
