--- a/librechat.yaml
+++ b/librechat.yaml
@@ -9,10 +9,11 @@ endpoints:
       headers:
         x-rotator-secret: "${ROTATOR_SECRET}"
       models:
-        default:
-          - "gemini-2.5-pro"
-          - "gemini-2.5-flash"
+        default: ["gemini-2.5-flash"]
+        fetch: false
+      titleConvo: true
+      titleModel: "current_model"
+      summarize: false
+      summaryModel: "current_model"
       customParams:
         defaultParamsEndpoint: "google"
-      titleModel: "gemini-2.5-flash"
-      summarizeModel: "gemini-2.5-flash"
