--- a/librechat.yaml
+++ b/librechat.yaml
@@ -26,7 +26,7 @@ endpoints:
       headers:
         x-rotator-secret: "${ROTATOR_SECRET}"
       models:
-        default: ["gemini-2.5-flash"]   
+        default: ["gemini-2.5-flash", "gemini-2.5-pro"] 
         fetch: false
       titleConvo: true
       titleModel: "current_model"
